--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+  <!-- Open Graph -->
+  <meta property="og:title" content="Undangan Pernikahan Fauzi Hilman & Ina S">
+  <meta property="og:description" content="Kami mengundang Anda untuk hadir di acara pernikahan kami.">
+  <meta property="og:image" content="https://xovpurple.github.io/fauziinawedding.github.io/gambar/pengantin.jpg">
+  <meta property="og:url" content="https://xovpurple.github.io/fauziinawedding.github.io/">
+  <meta property="og:type" content="website">
+
+  <!-- Optional (lebih bagus di WA) -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+        
     <title>Undangan Pernikahan - Fauzi & Ina</title>
     <link rel="stylesheet" href="style.css">
 </head>
