--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Undangan Pernikahan Fauzi Hilman & Ina S">
   <meta property="og:description" content="Kami mengundang Anda untuk hadir di acara pernikahan kami.">
-  <meta property="og:image" content="https://xovpurple.github.io/fauziinawedding.github.io/gambar/pengantin.jpg">
+  <meta property="og:image" content="https://xovpurple.github.io/fauziinawedding.github.io/gambar/pengantin.png">
   <meta property="og:url" content="https://xovpurple.github.io/fauziinawedding.github.io/">
   <meta property="og:type" content="website">
 
