--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <meta property="og:url" content="https://xovpurple.github.io/fauziinawedding.github.io/">
   <meta property="og:type" content="website">
 
-
+    <!-- Optional (lebih bagus di WA) --> 
+    <meta property="og:image:width" content="1200"> 
+    <meta property="og:image:height" content="630"
   
     <title>Undangan Pernikahan - Fauzi & Ina</title>
     <link rel="stylesheet" href="style.css">
