--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
   <!-- Open Graph -->
     <meta property="og:title" content="Undangan Pernikahan Fauzi Hilman & Ina S">
-    <meta property="og:description" content="Kami mengundang Anda untuk hadir di acara pernikahan kami.">
+    <meta property="og:description" content="22 Januari 2026">
     <meta property="og:image" content="https://xovpurple.github.io/fauziinawedding.github.io/gambar/pengantin.jpg">
     <meta property="og:url" content="https://xovpurple.github.io/fauziinawedding.github.io/">
     <meta property="og:type" content="website">
